# zip2zip

./: .gitignore  .pre-commit-config.yaml  README.md  _legacy_lzw_tokenizer.py  color_tokenizer.py  config.yaml  configs.py  custom_types.py  data.py  entrypoint.sh  eval.py  generate.py  generate_with_codebook_mgr.py  interface.py  model.py  optim.py  paper_prompts.py  py_fast_compression.py  pyproject.toml  requirements.txt  train-dist.sh  train.py  utils.py  visual.py
bench/: bench_tokenizers.py  run_harness_checkpoint.py  run_harness_pretrained.py  run_lm_eval.py
docs/: debug.md  tokenizer.md  training.md
example/: analyse_compression.py  benchmark_latency.py  check_codebook.py  colorprint_token_stream.py  compute_token_efficiency.py  compute_token_efficiency_multilingual_orca.py  end2end_performanes.py  get_lm_init_vocab_size.py  get_rid.py  inspect_hypertoken_embedding.py  plot_flops.py  plot_zip2zip-1B.py  run_generate.py  run_gsm8k.py  run_hellaswag.py  upload_model_ckp.py
examples/: debug.py  debug_from_config.py  generate_with_peft.py  load_model_from_config.py  logger.py  run.py  run_checkpoint.py  run_prebuilt_codebook.py  run_pretrained_model.py  use_zip2zip_tokenizer.py
fast_compression/: Cargo.toml  fast_compression.pyi  pyproject.toml
nn/: attention.py  lora.py  (+3 more)
zip2zip/compression/: Cargo.toml  compression.pyi
zip2zip/compression/src/: lib.rs
zip2zip_batch/compression/: Cargo.toml  compression.pyi  pyproject.toml
zip2zip_batch/compression/src/: lib.rs  main.rs
zip2zip_compression/: Cargo.toml  README.md  pyproject.toml  zip2zip_compression.pyi
zip2zip_compression/src/: lib.rs
(+76 files in other folders)
