[package]
name = "compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "compression"
crate-type = ["cdylib"]

[dependencies]
bumpalo = { version = "3.17.0", features = ["collections"] }
fastset = "0.4.1"
itertools = "0.14.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rand = "0.9.0"
rayon = "1.10.0"
rustc-hash = "2.1.1"
